syntax = "proto3";

package glix.v1;

option go_package = "github.com/inovacc/glix/pkg/api/v1";

import "proto/v1/database.proto";
import "google/protobuf/empty.proto";

// ========== Service Configuration ==========

message ServerConfig {
  string namespace = 1;           // Computer hostname or custom namespace
  string database_path = 2;       // Path to BoltDB file
  int32 port = 3;                 // gRPC server port
  string bind_address = 4;        // Address to bind (default: localhost)
}

message ServerStatus {
  bool running = 1;
  string namespace = 2;
  string database_path = 3;
  string address = 4;
  int64 uptime_seconds = 5;
  int64 module_count = 6;
}

// ========== Module Operations ==========

// StoreModuleRequest is used by the CLI to store module info after local installation
message StoreModuleRequest {
  database.ModuleProto module = 1;
  database.DependenciesProto dependencies = 2;
}

message StoreModuleResponse {
  bool success = 1;
  string error_message = 2;
}

message InstallRequest {
  string module_path = 1;         // e.g., github.com/user/repo
  string version = 2;             // Optional: specific version or "latest"
  bool force = 3;                 // Force reinstall even if exists
  bool stream_output = 4;         // Enable real-time output streaming
}

message InstallResponse {
  database.ModuleProto module = 1;
  bool success = 2;
  string error_message = 3;
}

message RemoveRequest {
  string module_path = 1;
  string version = 2;             // Optional: specific version or all
}

message RemoveResponse {
  bool success = 1;
  string error_message = 2;
}

message ListModulesRequest {
  int32 limit = 1;                // Pagination limit
  int32 offset = 2;               // Pagination offset
  string name_filter = 3;         // Optional name filter
}

message ListModulesResponse {
  repeated database.ModuleProto modules = 1;
  int64 total_count = 2;
}

message GetModuleRequest {
  string name = 1;
  string version = 2;             // Optional: if empty, returns latest
}

message GetModuleResponse {
  database.ModuleProto module = 1;
  bool found = 2;
}

message GetDependenciesResponse {
  database.DependenciesProto dependencies = 1;
  bool found = 2;
}

message UpdateRequest {
  string module_path = 1;
  bool stream_output = 2;
}

message UpdateResponse {
  database.ModuleProto old_module = 1;
  database.ModuleProto new_module = 2;
  bool success = 3;
  string error_message = 4;
}

// ========== Output Streaming ==========

message OutputLine {
  enum Stream {
    STDOUT = 0;
    STDERR = 1;
  }
  Stream stream = 1;
  string line = 2;
  int64 timestamp_unix_nano = 3;
}

message ProgressUpdate {
  string phase = 1;               // e.g., "downloading", "compiling", "installing"
  string message = 2;
  int32 percent_complete = 3;     // 0-100, -1 if unknown
}

message InstallProgress {
  oneof update {
    OutputLine output = 1;
    ProgressUpdate progress = 2;
    InstallResponse result = 3;
  }
}

// ========== Service Definition ==========

service GlixService {
  // Storage operations (called by CLI after local installation)
  rpc StoreModule(StoreModuleRequest) returns (StoreModuleResponse);

  // Query operations
  rpc ListModules(ListModulesRequest) returns (ListModulesResponse);
  rpc GetModule(GetModuleRequest) returns (GetModuleResponse);
  rpc GetDependencies(GetModuleRequest) returns (GetDependenciesResponse);

  // Module management (database only)
  rpc Remove(RemoveRequest) returns (RemoveResponse);

  // Server management
  rpc GetStatus(google.protobuf.Empty) returns (ServerStatus);
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);
}
